Fix images overflow

--- a/style.css
+++ b/style.css
@@ -1937,6 +1937,10 @@ p {
 .single_block {
     padding: 50px 20px;
 }
+.single_block img,
+.single_block div {
+  max-width: 100%;
+}
 /* single_block end */
 
 
